Add a dummy weather file (a suggestion from #60, thanks to @CBreton026)

--- a/docs/tutorial_buildme.ipynb
+++ b/docs/tutorial_buildme.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the previously defined archetype (variable `debug_combinations`), we create the files to be used in energy and/or material simulations. The first step is to create an array `simulation_files` with information about each building instance to be simulated. Each element of this array includes a list with necessary information about a building, such as the location of the EPWclimate file or the IDF building file. \n",
+    "Based on the previously defined archetype (variable `debug_combinations`), we create the files to be used in energy and/or material simulations. The first step is to create an array `simulation_files` with information about each building instance to be simulated. Each element of this array includes a list with necessary information about a building, such as the location of the .EPW climate file or the IDF building file. \n",
     "\n",
     "In addition, we create a variable `run` which is a unique identifier of this model run (created based on the timestamp)."
    ]
@@ -148,11 +148,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, based on the information stored in the `simulation_files` variable, we use the `copy_scenario_files()` function to create new folders in the `tmp` folder. The folders are then going to be used for performing the simulations. \n",
+    "Finally, based on the information stored in the `simulation_files` variable, the `copy_scenario_files()` function creates new folders in the `tmp` folder. \n",
     "\n",
-    "This step includes an essential part of the BuildME framework: substituting the so-called *replacement* strings. Inside the `copy_scenario_files()` function, we find `apply_obj_name_change()` routine applied to energy standard and resource efficiency scenarios. The routine substitutes the '-en-std-replaceme' and '-res-replaceme' strings included in the names of some materials by strings specific to the simulated building (e.g. 'standard' and 'RES0' like in our example). This way, BuildME automatizes the implementation of various energy standards which use e.g. insulation layers of different thickness.\n",
+    "The folders are then populated with weather files (.EPW) and building files (.IDF) chosen depending on the archetypes and climates selected in the 'debug_combinations' step. The weather files need to be created by the user using dedicated software, e.g. Meteonorm. If the files are not found, BuildME uses a dummy weather file for Miami, Florida, [made available by the U.S. Deparment of Energy](https://www.energycodes.gov/prototype-building-models).\n",
     "\n",
-    "After performing this step, the respective folders contain the EPW and IDF files necessary for the simulation. The IDF file called 'in.idf' is ready for simulation, e.g. all the 'replaceme' strings have been substituted. This means that the file could also be used to manually simulate energy demand using EnergyPlus GUI called EP-Launch.exe or similar. Please note that if the `copy_scenario_files()` function was to be omitted, then the 'replaceme' strings would *not* be substituted and the simulation would fail because these names would not match any constructions defined in the IDF file."
+    "This step includes an essential part of the BuildME framework: substituting the so-called *replacement* strings. Inside the `copy_scenario_files()` function, we find `apply_obj_name_change()` routine applied to energy standard and resource efficiency scenarios. The routine substitutes the '-en-std-replaceme' and '-res-replaceme' strings included in the names of some materials by strings specific to the simulated building (e.g. 'standard' and 'RES0' like in our example). This way, BuildME automatizes the implementation of various energy standards which use e.g. insulation layers of different thickness."
    ]
   },
   {
@@ -162,6 +162,13 @@
    "outputs": [],
    "source": [
     "simulate.copy_scenario_files(simulation_files, run)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After performing the step described above, the respective folders contain the EPW and IDF files necessary for the simulation. The IDF file called 'in.idf' is ready for simulation, e.g. all the 'replaceme' strings have been substituted. This means that the file could also be used to manually simulate energy demand using EnergyPlus GUI called EP-Launch.exe or similar. Please note that if the `copy_scenario_files()` function was to be omitted, then the 'replaceme' strings would *not* be substituted and the simulation would fail because these names would not match any constructions defined in the IDF file."
    ]
   },
   {
