Move the tutorial to a subfolder

--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -36,7 +36,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('..')\n",
+    "\n",
+    "if os.path.basename(os.getcwd()) != 'BuildME':\n",
+    "    os.chdir('../..')\n",
+    "\n",
     "from BuildME import pre, simulate"
    ]
   },
