--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -6,11 +6,9 @@
    "source": [
     "# Tutorial BuildME\n",
     "\n",
-    "This tutorial shows the most important functionalities of the BuildME framework using a mix of interactive code cells and text cells. The tutorial walks the user through the most important steps shown also in the `main.py` file. The four most important stages shown in this tutorial include:\n",
-    "1. Setting up the framework\n",
-    "1. Simulating energy demand\n",
-    "1. Simulating material demand\n",
-    "1. Processing the results"
+    "This tutorial shows the most important functionalities of the BuildME framework using a mix of interactive code cells and text cells. The tutorial walks the user through the most important steps shown also in the `main.py` file of the framework. \n",
+    "\n",
+    "During the tutorial, we: 1) select a building archetype and set up the framework, 2) simulate its energy demand using Energy+, 3) calculate its material demand, 4) process the results. "
    ]
   },
   {
@@ -24,9 +22,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before we can proceed, some initial setup needs to be performed: Python dependencies and Energy+ need to be installed, and the paths in `BuildME/settings.py` might need to be updated. These steps and other potential setup issues are described [here](https://github.com/nheeren/BuildME/blob/master/docs/setup.md)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Imports\n",
     "\n",
-    "First, we import the BuildME framework (and the `os` package which allows us to change the current working directory)."
+    "We need to import the BuildME framework (and the `os` package which allows us to change the current working directory)."
    ]
   },
   {
@@ -51,7 +56,11 @@
     "\n",
     "As the next step, we need to define the type of building we want to simulate. We can do that by creating a variable `debug_combinations`. This variable should contain information such as region, occupation and other aspects. The possible combinations of the different aspects are listed in the `combinations` variable in `settings.py`. \n",
     "\n",
-    "Let's say we want to simulate building located in the **US**. The building is a single family house (**SFH**), typical in terms of energy standards (**standard**) and with no special assumptions on resource efficiency (**RES0**). The energy requirements for this building are influenced by climate, so we specify the time (year 2015) and location of the building (Miami, climate region **1A**). The cooling demand of this building is fulfilled solely using the **HVAC** system (an alternative is to use the mixed-mode ventilation system - MMV)."
+    "Let's say we want to simulate a single family house (**SFH**) located in the **US**. We assume that the building is built without extra requirements on resource efficiency (**RES0**) and that the cooling demand is fulfilled solely using the **HVAC** system. We choose mixed humid climate such as in Baltimore (climate region **4A**) in the reference year **2015**. We are interested in how the energy standard influences the energy use in the building, so we select four different ones: **standard**, **non-standard** (below standard), **efficient** and **ZEB**.\n",
+    "\n",
+    "The keywords marked in bold are the categories we insert to our `debug_combinations` dictionary, as shown below. Using the dictionary, the framework can proceed, assuming that the required archetype file (.idf extension) and weather file (.epw extension) are present. \n",
+    "\n",
+    "The archetype files are provided by the framework and can be found in folder `BuildME\\data\\archetype\\USA\\`. The weather files need to be created by the user using dedicated software, e.g. Meteonorm, and can be found in folder `BuildME\\data\\climate\\meteonorm71\\**reference year**\\`. The names of the weather file for each climate are specified in the `climate_stations` variable in `settings.py`. If the weather file is not found, BuildME uses a dummy weather file for New York, NY (climate region 4A), [made available by the U.S. Department of Energy](https://www.energycodes.gov/prototype-building-models)."
    ]
   },
   {
@@ -63,9 +72,9 @@
     "debug_combinations = {\n",
     "    'USA':\n",
     "        {'occupation': ['SFH'],\n",
-    "         'energy standard': ['standard'],\n",
+    "         'energy standard': ['non-standard', 'standard', 'efficient', 'ZEB'],\n",
     "         'RES': ['RES0'],\n",
-    "         'climate_region': ['1A'],\n",
+    "         'climate_region': ['4A'],\n",
     "         'climate_scenario': ['2015'],\n",
     "         'cooling': ['HVAC']}}"
    ]
@@ -76,7 +85,7 @@
    "source": [
     "### Checking EnergyPlus compatibility\n",
     "\n",
-    "The next step is to check the EnergyPlus version - the one installed by the used locally should match the one that is used by BuildME. "
+    "The next step is to check the EnergyPlus version - the one installed by the user locally should match the one that is used by BuildME. "
    ]
   },
   {
@@ -153,7 +162,7 @@
    "source": [
     "Finally, based on the information stored in the `simulation_files` variable, the `copy_scenario_files()` function creates new folders in the `tmp` folder. \n",
     "\n",
-    "The folders are then populated with weather files (.EPW) and building files (.IDF) chosen depending on the archetypes and climates selected in the 'debug_combinations' step. The weather files need to be created by the user using dedicated software, e.g. Meteonorm. If the files are not found, BuildME uses a dummy weather file for Miami, Florida, [made available by the U.S. Deparment of Energy](https://www.energycodes.gov/prototype-building-models).\n",
+    "The folders are then populated with weather files (.EPW) and building files (.IDF) chosen depending on the archetypes and climates selected in the 'debug_combinations' step. \n",
     "\n",
     "This step includes an essential part of the BuildME framework: substituting the so-called *replacement* strings. Inside the `copy_scenario_files()` function, we find `apply_obj_name_change()` routine applied to energy standard and resource efficiency scenarios. The routine substitutes the '-en-std-replaceme' and '-res-replaceme' strings included in the names of some materials by strings specific to the simulated building (e.g. 'standard' and 'RES0' like in our example). This way, BuildME automatizes the implementation of various energy standards which use e.g. insulation layers of different thickness."
    ]
@@ -213,9 +222,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To calculate the amount of material used in the building, BuildME checks all the constructions used in the building, lists all the layers of materials and adds up their volumes, which are then converted to mass. The materials are then grouped into categories such as 'concrete', 'brick', 'paper and cardboard' etc., as indicated by the `odym_materials` variable found in the `settings.py` file.\n",
+    "To calculate the amount of material used in the building, BuildME performs a number of operations. First, it lists the constructions used in the building: walls, floors, ceilings, roof, doors, window glazing. After listing all the layers of materials used in these constructions, it adds up their volumes, which are then converted to mass. In addition, some surrogate structures are created, such as a basement and extra internal walls (corresponding to internal partitions; typically not represented in Energy+, which limits internal walls to those defining building zones).\n",
     "\n",
-    "After performing this step, a file `materials.csv` appears in the respective folder. The file contains the material categories and their mass (kg). On the bottom, the floor area (m<sup>2</sup>) is also given, which can be used to calculate material intensity."
+    "The materials are then grouped into categories such as 'concrete', 'brick', 'paper and cardboard' etc., as indicated by the `odym_materials` variable found in the `settings.py` file.\n",
+    "\n",
+    "After performing this step, a file `materials.csv` appears in the respective folder. The file contains the material categories and their mass (kg) contained in the entire building. The floor area of the building (m<sup>2</sup>) is also given (`floor_area_wo_basement`), and can be used to calculate the material intensity."
    ]
   },
   {
@@ -240,7 +251,9 @@
    "source": [
     "After all the simulations have been performed, the results can be processed and structured. \n",
     "\n",
-    "The first post-processing step includes the creation of an `energy_demand.csv` file, which lists the various energy use categories (heating, cooling, lighting, equipment) and their energy use (J). The energy values are also saved to a variable `res_energy` which is used in the following steps. Similarly, we need a variable containing the information about material demand, which is why `res_mat` is also created."
+    "The first post-simulation step requires collection of energy and material data. For each building combination, file `energy_demand.csv` is created. It lists energy use categories (heating, cooling, lighting, equipment) and their energy use (in joules, for the entire building). \n",
+    "\n",
+    "Dictionaries `res_energy` and `res_mat` are created to contain the energy and material demand information for all the building combinations. "
    ]
   },
   {
@@ -257,10 +270,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TO DO: Explain what happens in the two steps below:\n",
-    "- DHW is added manually.\n",
-    "- What are the units? (seems like MJ, but maybe it would be more natural to have kWh)\n",
-    "- What is the importance of scenarios? It is mentioned in functions such as `divide_by_area`, `disaggregate_scenario_str`, and `weighing_climate_region`"
+    "### Data visualization - table\n",
+    "\n",
+    "At this point, the results for all building combinations can be visualized using a few simple data manipulation steps performed with the use of the `pandas` and `numpy` library. Below, we can see the energy (MJ) and material demand (kg) for 1 m2 of the building."
    ]
   },
   {
@@ -269,7 +281,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulate.save_ei_result(run, res_energy, res_mat)"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df_mat = pd.DataFrame(data=res_mat).T\n",
+    "area = df_mat['floor_area_wo_basement']\n",
+    "df_mat = df_mat.div(area, axis=0)\n",
+    "df_mat = df_mat.drop(['floor_area_wo_basement', 'footprint_area'], axis=1)\n",
+    "df_mat = df_mat.drop(['total_mat'], axis=1)\n",
+    "energy_standards = np.array([v.split('_')[2] for v in list(df_ene.index)])\n",
+    "df_mat = df_mat.set_index(energy_standards)\n",
+    "\n",
+    "df_ene = pd.DataFrame(data=res_energy).T\n",
+    "df_ene = df_ene.div(area, axis=0)\n",
+    "df_ene = df_ene.rename(columns={v: v.split(':')[0] for v in list(df_ene.columns)})\n",
+    "df_ene = df_ene.set_index(energy_standards)"
    ]
   },
   {
@@ -278,14 +303,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulate.save_mi_result(run, res_mat)"
+    "df_ene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data visualization - plot\n",
+    "\n",
+    "Optionally, we can also plot the results using the 'matplotlib' library. For easier comparison, the results are converted to relative values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "(df_ene/df_ene.max()).plot.bar(rot=0)\n",
+    "plt.legend(bbox_to_anchor=(1,1))  \n",
+    "(df_mat/df_mat.max()).plot.bar(rot=0)\n",
+    "plt.legend(bbox_to_anchor=(1,1)) "
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f18f3dbb1b099352cc88d8f0cba8e17f54ca5f4a87d57cda207b1033344adb1b"
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -302,6 +355,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e844b37cd586575fc50ffd8f50511fa19f50dbd6f3b7f75f5e64d44671fa37b7"
+   }
   }
  },
  "nbformat": 4,
