Small fix to the tutorial update

--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -288,13 +288,13 @@
     "df_mat = df_mat.div(area, axis=0)\n",
     "df_mat = df_mat.drop(['floor_area_wo_basement', 'footprint_area'], axis=1)\n",
     "df_mat = df_mat.drop(['total_mat'], axis=1)\n",
-    "energy_standards = np.array([v.split('_')[2] for v in list(df_ene.index)])\n",
-    "df_mat = df_mat.set_index(energy_standards)\n",
     "\n",
     "df_ene = pd.DataFrame(data=res_energy).T\n",
     "df_ene = df_ene.div(area, axis=0)\n",
+    "energy_standards = np.array([v.split('_')[2] for v in list(df_ene.index)])\n",
     "df_ene = df_ene.rename(columns={v: v.split(':')[0] for v in list(df_ene.columns)})\n",
-    "df_ene = df_ene.set_index(energy_standards)"
+    "df_ene = df_ene.set_index(energy_standards)\n",
+    "df_mat = df_mat.set_index(energy_standards)"
    ]
   },
   {
