Prevent the creation of an empty replace_mmv.xlsx
Now, the file is only created when needed (if 'MMV' is found in the building combinations) and otherwise "None" is passed. The MMV archetype precalculation stays the same (again, only if 'MMV' is passed in the building combinations), i.e., the MMV idf file (e.g. SFH_auto-MMV.idf) is created and then subsequent runs use this pre-created idf file.

--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -101,9 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating MMV variants (or at least an empty xlsx file)\n",
+    "### Creating MMV variants (optional)\n",
     "\n",
-    "If the user has selected 'MMV' as the cooling type, then the next step is to create a MMV variant out of the archetype that was chosen for simulation. Even in case the user has selected 'HVAC' as the cooling type, the MMV precalculation routine needs to run to create an empty `replace_mmv.xlsx` file in the `data` folder. Creating this file ensures that the simulation can proceed in further steps of the workflow."
+    "If the user has selected 'MMV' as the cooling type, then the next step is to create a MMV variant out of the archetype that was chosen for simulation. If the cooling type for every building combination is 'HVAC', this simulation step could be skipped."
    ]
   },
   {
