allow for processing the results of the last model run

--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -262,8 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_energy = simulate.collect_energy(simulation_files)\n",
-    "res_mat = simulate.load_material(simulation_files)"
+    "res_energy = simulate.collect_energy()\n",
+    "res_mat = simulate.load_material()"
    ]
   },
   {
