More versatile dataframe for plotting (and optional filter)

--- a/docs/notebook/tutorial_buildme.ipynb
+++ b/docs/notebook/tutorial_buildme.ipynb
@@ -290,11 +290,20 @@
     "df_mat = df_mat.drop(['total_mat'], axis=1)\n",
     "\n",
     "df_ene = pd.DataFrame(data=res_energy).T\n",
+    "df_ene2 = pd.DataFrame(data=res_energy)\n",
     "df_ene = df_ene.div(area, axis=0)\n",
-    "energy_standards = np.array([v.split('_')[2] for v in list(df_ene.index)])\n",
     "df_ene = df_ene.rename(columns={v: v.split(':')[0] for v in list(df_ene.columns)})\n",
-    "df_ene = df_ene.set_index(energy_standards)\n",
-    "df_mat = df_mat.set_index(energy_standards)"
+    "split = [v.split('_') for v in list(df_ene.index)]\n",
+    "categories = ['region', 'occupation', 'energy standard','RES', 'climate_region', 'climate_scenario', 'cooling']\n",
+    "chosen_categories = []\n",
+    "for i,category in enumerate(categories):\n",
+    "    items = [item[i] for item in split]\n",
+    "    if not all(ele == items[0] for ele in items):\n",
+    "        df_ene[category] = items\n",
+    "        df_mat[category] = items\n",
+    "        chosen_categories.append(category)\n",
+    "df_ene = df_ene.set_index(chosen_categories)\n",
+    "df_mat = df_mat.set_index(chosen_categories)"
    ]
   },
   {
@@ -319,9 +328,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data visualization - plot\n",
+    "### Data visualization - simple\n",
     "\n",
-    "Optionally, we can also plot the results using the 'matplotlib' library. For easier comparison, the results are converted to relative values."
+    "We can also plot the results using the 'matplotlib' library. For easier comparison, the results are converted to relative values. Optionally, we can filter the dataframe and only display some part of the results, which is done by slicing the dataframe's multiindex. The filter can be customized, depending on the combinations of archetypes chosen for the simulation. The multiindex names and values can be found by printing `df_ene.index`."
    ]
   },
   {
@@ -330,10 +339,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# print(df_ene.index)\n",
+    "# df_ene = df_ene[np.in1d(df_ene.index.get_level_values(0), ['standard'])] # optional customizable filter\n",
+    "# df_mat = df_mat[np.in1d(df_mat.index.get_level_values(0), ['standard'])] # optional customizable filter\n",
     "import matplotlib.pyplot as plt\n",
-    "(df_ene/df_ene.max()).plot.bar(rot=0)\n",
+    "(df_ene/df_ene.max()).plot.bar(rot=30)\n",
     "plt.legend(bbox_to_anchor=(1,1))  \n",
-    "(df_mat/df_mat.max()).plot.bar(rot=0)\n",
+    "(df_mat/df_mat.max()).plot.bar(rot=30)\n",
     "plt.legend(bbox_to_anchor=(1,1)) "
    ]
   }
